src/pages/stats/common/components/charts/KeyMetricStat/KeyMetricCellWrapper.less
:local {
    .metric {
        margin: 0;
        flex-grow: 1;
        padding: 25px 20px;
        background: var(--neutral-grey-2);

        @media (max-width: 992px) {
            flex-basis: 0;
        }

        &:nth-child(n + 1) {
            border-left: 1px solid var(--neutral-grey-3);
        }

        & > * {
            text-align: left;
        }

        .label {
            font-weight: 600;
            font-size: 11px;
            text-transform: uppercase;
            letter-spacing: 0.6px;
            text-align: center;
        }

        .info-icon {
            font-weight: 700;
            font-size: 13px;
        }
    }
}

